done: manager get all users route
