# route/user.js
@@ -10,7 +10,8 @@ const {
     getLoggedInUserDetails,
     changePassword,
     updateUserDetails,
-    adminAllUser
+    adminAllUser,
+    managerAllUser
 } = require('../controller/userController');
 
 const { isLoggedIn, customRole } = require('../middleware/user');
@@ -24,4 +25,5 @@ router.route('/userDashboard').get(isLoggedIn, getLoggedInUserDetails);
 router.route('/password/update').post(isLoggedIn, changePassword);
 router.route('/userdashboard/update').post(isLoggedIn, updateUserDetails);
 router.route("/admin/users").get(isLoggedIn, customRole("admin"), adminAllUser);
+router.route("/manager/users").get(isLoggedIn, customRole("manager"), managerAllUser);
 module.exports = router;
